<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/scale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_input"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="40">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telephone_input_layout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#BB86FC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telephone_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_input"
            android:inputType="number">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/gender_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/gender_text"
        android:textAppearance="@style/TextAppearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telephone_input_layout"/>

    <RadioGroup
        android:id="@+id/gender_choice_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_text_view">

        <RadioButton
            android:id="@+id/male_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="М" />

        <RadioButton
            android:id="@+id/female_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ж" />
    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notice_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/text_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_choice_radio_group" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/authorization_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_first_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notice_switch" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/news_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_second_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorization_checkbox" />

    <TextView
        android:id="@+id/points_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points_text"
        android:textAppearance="@style/TextAppearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news_checkbox" />

    <TextView
        android:id="@+id/number_of_points_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news_checkbox" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/points_text_view" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:enabled="false"
        android:text="@string/text_button"
        app:layout_constraintTop_toBottomOf="@+id/progress" />

</androidx.constraintlayout.widget.ConstraintLayout>